revert: change back icon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "Edi Prakoso"
 title: "Edi Prakoso"
 description: "Blogger platform"
-logo: 'assets/images/edi-prakoso-logo.png'
+logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'UA-46278016-1'
