--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Edi Prakoso"
 description: "Blogger platform"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: ''
+baseurl: 'https://prakoso.me'
 google_analytics: 'UA-46278016-1'
 disqus: 'prakoso-me'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
